# sales-supplier-management-api

./: .env  DESIGN.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/core/: auth_user.py  security.py
app/migrations/: env.py
app/migrations/versions/: 0c64afb425fe_removing_part_column_from_warranty.py  46ddef4b0a44_adding_is_admin_column.py  4e29fc7d2a55_adding_units_on_purchase_table.py  7abcecd8e01e_adding_ondelete_and_onupdate_cascade_on_.py  98db5e0dd4d4_adding_unique_constraint_in_location.py  cc86d9a49392_adding_unit_price_on_part_table.py
app/models/: __init__.py  location.py  part.py  purchase.py  supplier.py  user.py  vehicle.py  warranty.py
app/schemas/: __init__.py  location.py  part.py  user.py  warranty.py
app/scripts/: create_db.py  seed_db.py
app/seed/: 3.Part.csv  4.Vehicle.csv  5.Purchase.csv  6.Warranty.csv  7.User.csv
app/services/: auth.py  auth_service.py  db_service.py  location.py  user.py  user_service.py
app/session/: __init__.py
app/tests/: analytcs_test.py  auth_test.py  conftest_.py  crud_test.py  metadata_test.py
backend/: __init__.py
backend/app/api/: __init__.py  dependencies.py
backend/app/db/: __init__.py  create_db.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  location.py  part.py  purchances.py  purchase.py  supplier.py  user.py  vehicle.py  warranty.py
backend/app/schemas/: __init__.py  location.py  purchase.py  supplier.py  user.py  vehicle.py
backend/app/scripts/: create_db.py  (+1 more)
(+28 files in other folders)
